--- a/AbbyWeb/Pages/Categories/Index.cshtml
+++ b/AbbyWeb/Pages/Categories/Index.cshtml
@@ -3,6 +3,7 @@
 @{
 }
 <h1>list:</h1>
+<a class="btn-sm btn-success" asp-page="Create">Create New Category</a>
 <table class="table table-hover table-bordered table-responsive w-100">
     <tr>
 
@@ -22,6 +23,6 @@
         </tr>
     }
 </table>
-<a class="btn-sm btn-success" asp-controller="Lecturer" asp-action="LectutrerPanel">پروفایل استاد</a>
+@*<a class="btn-sm btn-success" asp-controller="Lecturer" asp-action="LectutrerPanel">پروفایل استاد</a>*@
 
 
