--- a/AbbyWeb/Pages/Categories/Edit.cshtml
+++ b/AbbyWeb/Pages/Categories/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@page
-@model AbbyWeb.Pages.Categories.CreateModel
+@model AbbyWeb.Pages.Categories.EditModel
 <form  method="post">
+    <input hidden asp-for="Category.Id" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary pl-3">Create Category</h2>
+            <h2 class="text-primary pl-3">Edit Category</h2>
             <hr />
         </div>
         <div asp-validation-summary="All">
@@ -22,8 +23,8 @@
             <span asp-validation-for="Category.DisplayOrder" class="text-danger"></span>
 
         </div>
-        <button type="submit"  class="btn btn-primary" style="width:150px;">Create</button>
-        <a asp-page="../Index" class="btn btn-secondary" style="width:120px;"> back to list</a>
+        <button type="submit"  class="btn btn-primary" style="width:150px;">Update</button>
+        <a asp-page="Index" class="btn btn-secondary" style="width:120px;"> back to list</a>
     </div>
 </form>
 @section  Scripts{
