--- a/AbbyWeb/Pages/Categories/Index.cshtml
+++ b/AbbyWeb/Pages/Categories/Index.cshtml
@@ -9,20 +9,25 @@
 
         <td>Name</td>
         <td>Displayorder</td>
+        <td></td>
     </tr>
     @foreach (var obj in Model.categoties)
     {
         <tr>
             <td>@obj.Name</td>
             <td>@obj.DisplayOrder</td>
-@*            <td>
-                <form asp-controller="Lecturer" asp-action="Delete" asp-route-id="@course.Id" method="post">
-                    <input type="submit" class="btn-sm btn-danger" value="حذف">
-                </form>
-            </td>*@
+            <td>
+                <div>
+                <a  asp-page="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">Edit</a>
+                <a  asp-page="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">Delete</a>
+                </div>
+            </td>
         </tr>
     }
 </table>
-@*<a class="btn-sm btn-success" asp-controller="Lecturer" asp-action="LectutrerPanel">پروفایل استاد</a>*@
 
 
+
+@*<form asp-controller="Lecturer" asp-action="Delete" asp-route-id="@course.Id" method="post">
+    <input type="submit" class="btn-sm btn-danger" value="حذف">
+</form>*@
